--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Final Project Group 34
-email: your-email@example.com
+email: your-email@example.
 description: >- # this means to ignore newlines until "baseurl:"
   Impact of Urban Reforestation on Melbourne urban area 
 baseurl: "" # the subpath of your site, e.g. /blog
