--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Final Project Group 34
 email: your-email@example.
 description: >- # this means to ignore newlines until "baseurl:"
   Impact of Urban Reforestation on Melbourne urban area 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/startbootstrap-clean-blog-jekyll"
+url:  "https://startbootstrap.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
@@ -31,6 +31,7 @@ github_username:  jekyll
 theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
+  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
