--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,12 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-clean
+remote-theme: jekyll-theme-clean-blog
+
+
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
   
 
 # Exclude from processing.
