--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,12 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote-theme: jekyll-theme-clean-blog
+theme: jekyll-theme-clean-blog
 
 
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
+
   
 
 # Exclude from processing.
