--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: clean-blog-jekyll-theme
+theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
 
