--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ linkedin_username:
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
+theme: jekyll-theme-clean-blog
 # Build settings
 markdown:           kramdown
 paginate:           5
